Ignore IDE files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Project SPECIFIC .gitignore file
 .ok_*
 
+# IDEs and editors
+.idea/
+.vscode/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
